--- a/options.html
+++ b/options.html
@@ -6,7 +6,22 @@
     <script src="jquery-1.10.2.js"></script>
     <script src="options.js"></script>
 </head>
+
+
+
+
+
 <body>
+    <h1>Configuración del estilo del WhatsApp Web</h1>
     
+	<h2>Imagen de fondo de chat:</h2>
+	<textarea id="txtImgBack" name="txtImgBack" cols="100" rows="1"></textarea>
+	
+	<br>
+	<br>
+	
+    <input type="submit" id="save" value="Guardar">
+    <input type="submit" id="reset" value="Resetear">
+	
 </body>
 </html>
