--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WhatsApp SWF</title>
-    <script src="jquery-1.10.2.js"></script>
+    <script src="jquery-1.12.4.min.js"></script>
     <script src="popup.js"></script>
     <link rel="stylesheet" type="stylesheet/css"href="popup.css">
 </head>
