--- a/options.html
+++ b/options.html
@@ -11,6 +11,7 @@
 	<script src="bootstrap-3.3.min.js"></script>
 	<script src="options.js"></script>
 
+	
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 <div class="container">
 	
 	<div class="row">	
-		<div class="starter-template">
+		<div class="starter-template hide">
 		
 			<h1>Configuración de Estilos</h1>
 			<h2>WhatsApp Web</h2>
@@ -30,9 +31,10 @@
 	<br><br>
 	  
 	  
+	  
 	  <div > 
 	  
-	  <form class="form-horizontal"> 
+	  <form class="form-horizontal hide"> 
 			<div class="form-group"> 
 		  
 				<label class="col-sm-2 control-label">Imagen de Fondo</label> 
@@ -51,6 +53,17 @@
 				  </div>
 				</div>
 			</div>
+			
+			<div class="form-group"> 
+		  
+				<label class="col-sm-2 control-label">opacidad</label> 
+				<div class="col-sm-10"> 
+					<input type="range" name="points" id="points" value="50" min="0" max="100">
+					<input type="range" min="1" max="100" value="100" class="slider" id="myRange">
+				</div> 
+			
+			</div> 
+			
 			
 			<div class="form-group"> 
 			
