--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>WhatsApp SWF</title>
+    <title>Whatsfw</title>
     <script src="jquery-1.12.4.min.js"></script>
     <script src="popup.js"></script>
-    <link rel="stylesheet" type="stylesheet/css"href="popup.css">
+    <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
-    <h1>WhatsApp SWF</h1>
-    <input type="submit" id="btnAplicarEstilos" value="Aplicar">
-	<input type="submit" id="btnQuitarEstilos" value="Quitar">
+    <h1>WhatsApp SFW v1.3</h1>
+    <input type="button" id="btnAplicarEstilos" value="Aplicar">
+	<input type="button" id="btnQuitarEstilos" value="Quitar">
 </body>
 </html>
